2008-05-14 15:19 +0200  Samuel Tardieu  <sam@rfc1149.net>  (5518355bc6da)

	* curs_main.c: Always update status bar after sorting method changes
	(closes #2120).

2008-05-12 23:15 -0700  Brendan Cully  <brendan@kublai.com>  (97aa20438c47)

	* imap/imap.c: Terminate open IMAP message sets at end of mailbox
	even if the last message is inactive. Closes #3002.

2008-05-11 10:52 +0200  Matthias Andree  <matthias.andree@gmx.de>  (09b0363cdf54)

	* rfc3676.c: In debug output, cast size_t arguments to long for
	consistency with printf %ld argument.

2008-05-11 00:50 -0700  Brendan Cully  <brendan@kublai.com>  (98c39c5187a9)

	* main.c: Update copyright in -vv output. Closes #3042.

2008-05-07 11:54 -0700  Brendan Cully  <brendan@kublai.com>  (385efdbf9423)

	* mutt_sasl.c, mutt_sasl.h: Make SASL support conn_poll method.
        Make SASL IP lookup failure non-fatal. Both are for tunnel support.

2008-05-05 19:32 +0200  Rocco Rutte  <pdmef@gmx.net>  (0eacf5297484)

	* mbyte.c, mbyte.h: Fix some compiler warnings if compiling without
	system wide character functions

	* mbyte.c, protos.h, utf8.c: Pass buffer size to mutt_wctoutf8()
	to prevent crashes if MB_LEN_MAX<6 as pointed out by exg on #mutt.

2008-04-29 10:44 -0700  David Champion  <dgc@uchicago.edu>  (1de934f1d618)

	* muttlib.c: [9414b9dd36db] broke softfill. (closes #3035)

2008-04-29 10:38 -0700  Wilfried Goesgens  <dothebart@uncensored.citadel.org>  (8017c8074f62)

	* imap/auth_gss.c: Print GSSAPI status messages to debug log on
	error.

2008-04-03 17:08 +0200  Miroslav Lichvar  <mlichvar@redhat.com>  (bdd44e92919d)

	* mutt_ssl_gnutls.c: Fix sending long commands when using gnutls.

2008-04-09 15:57 -0700  Dan Fandrich  <dan@coneharvesters.com>  (3b7b3c0e459e)

	* configure.ac, strtok_r.c: Replace strtok_r when it's not
	available. The implementation comes from glibc 2.6.1 (like the
	strsep replacement) and uses the same autoconf hooks.
